--- a/_scss/_forms.scss
+++ b/_scss/_forms.scss
@@ -3,8 +3,12 @@
 @import "ucla-vars"; // WHY?!
 
 input {
-	width: 21em;
-	font-size: $h3-font-size;
+	width: 100%;
+	font-size: $h4-font-size;
+	@include breakpoint($past-mobile) {
+		width: 21em;
+		font-size: $h3-font-size;
+	}
 	margin-bottom: $default-spacing;
 	@include border-radius($global-border-radius);
 }
@@ -130,7 +134,6 @@ button[disabled] {
 	color: $white;
 	margin: $default-spacing auto 0;
 	display: block;
-	width: 36em;
 	&:hover {
 		background-color: darken($secondary-login-option-color, 10%);
 		color: $white;
