--- a/_scss/_ucla-vars.scss
+++ b/_scss/_ucla-vars.scss
@@ -91,7 +91,7 @@ $half-spacing: $default-spacing / 2;
 $double-spacing: $default-spacing * 2;
 $triple-spacing: $default-spacing * 3;
 $quad-spacing: $default-spacing * 4;
-$page-top-spacing: $default-spacing * 6;
+$page-spacing: $default-spacing * 6;
 
 $global-border-radius: 3px;
 
