--- a/_scss/_ucla-vars.scss
+++ b/_scss/_ucla-vars.scss
@@ -3,7 +3,7 @@
 /////////////////////////////////////////
 
 // breakpoints
-$mobile: 0 28em;
+$mobile-only: 0 28em;
 $past-mobile: 28.01em;
 $liquid: 28.01em 38em;
 $elastic: 38.01em;
