--- a/_scss/_forms.scss
+++ b/_scss/_forms.scss
@@ -56,6 +56,10 @@ fieldset {
 }
 
 legend {
+	@include breakpoint($mobile-only) {
+		text-align: center;
+		padding-top: 0;
+	}
 	display: block;
 	width: 100%;
 	padding: $half-spacing 0;
@@ -65,6 +69,9 @@ legend {
 }
 
 button, .button {
+	@include breakpoint($mobile-only) {
+		width: 100%;
+	}
 	display: inline-block;
 	*display: inline; /*IE 6/7*/
 	zoom: 1;
@@ -118,24 +125,3 @@ button[disabled] {
 	cursor: not-allowed;
 	box-shadow: none;
 }	
-
-.primary-button {
-	background-color: $primary-color;
-	color: #fff;
-	font-size: $h4-font-size;
-	&:hover {
-		background-color: $secondary-color;
-		color: $primary-color-alternate-state;
-	}
-}
-
-.secondary-button {
-	background-color: $secondary-login-option-color;
-	color: $white;
-	margin: $default-spacing auto 0;
-	display: block;
-	&:hover {
-		background-color: darken($secondary-login-option-color, 10%);
-		color: $white;
-	}
-}
