--- a/_scss/_forms.scss
+++ b/_scss/_forms.scss
@@ -60,6 +60,7 @@ legend {
 		text-align: center;
 		padding-top: 0;
 	}
+	line-height: $base-line-height * 1.1;
 	display: block;
 	width: 100%;
 	padding: $half-spacing 0;
