--- a/_scss/_sso-styles.scss
+++ b/_scss/_sso-styles.scss
@@ -28,15 +28,18 @@ h1, h2, h3, h4 {
 
 h1 {
 	font-size: $h1-font-size;
-	line-height: $base-line-height * 1.1;
-}
-
-div h1, article h1 {
-		margin: 0;
+	line-height: $base-line-height * .9;
+	margin: 0;
+	@include breakpoint($mobile-only) {
+		font-size: $h2-font-size;
+	}
 }
 
 h2 {
 	font-size: $h2-font-size;
+	@include breakpoint($mobile-only) {
+		font-size: $h3-font-size;
+	}
 }
 
 h3 {
@@ -76,9 +79,6 @@ section[role="main"] ul {
 	list-style: none;
 	padding-left: .25em;
 	margin-bottom: 0;
-	li {
-		margin-bottom: .5em;
-	}
 	li:before {
 		color: $bullet-color;
 		content: "•";
@@ -86,6 +86,10 @@ section[role="main"] ul {
 		font-size: 1.2em;
 		left: -.25em;
 	}
+}
+
+li {
+	margin-bottom: .5em;
 }
 
 /////////////////////////////////////////
@@ -182,9 +186,6 @@ article, #sso, .secondary-button, .sp-support, .tertiary-links-wrapper {
 	@include clearfix;
 	font-size: $meta-font-size;
 	margin: .25em;
-	li {
-		margin-bottom: 0;
-	}
 }
 
 .login-fail {
